# LifeRPG

./: README.md  TODO.md  pyproject.toml
src/: .evn.example  bot.py  default_settings.toml
src/handlers/: __init__.py  inline.py  items.py  keyboards.py  locations.py  map.py  profile.py  quests.py  start.py
src/handlers/battle/: battle.py
src/handlers/pvp/: pvp.py
src/kb/: __init__.py  inline.py  kb.py
src/middlewares/: user_ban.py
src/utils/: battle.py  config.py  exceptions.py  texts.py
src/utils/db/: __init__.py  inventory.py  item.py  location.py  models.py  quest.py  user.py
src/utils/logging/: logger.py
src/utils/other/: __init__.py  emoji.py  gifts.py
